--- a/workloads/app2/fk.yaml
+++ b/workloads/app2/fk.yaml
@@ -1,17 +1,17 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: app2
   namespace: dev-team
 spec:
-  interval: 120m
-  wait: true
-  timeout: 5m
-  retryInterval: 3m
+  force: false
+  interval: 60m
+  path: ./workloads/app2
   prune: true
-  force: true
+  retryInterval: 5m
   sourceRef:
     kind: GitRepository
     name: dev-team-sync
-  path: ./workloads/app2
+  targetNamespace: dev-team
+  timeout: 3m
+  wait: true
