--- a/workloads/kustomization.yaml
+++ b/workloads/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- fk1.yaml
-- fk2.yaml
+- app1/fk1.yaml
+- app2/fk2.yaml
