--- a/workloads/kustomization.yaml
+++ b/workloads/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- app1/kustomization.yaml
+- app1/fk.yaml
 - app2/fk.yaml
